Fixed number spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ h1 {
   position: absolute;
   bottom: 0;
   left: 0;
-  transform: translate(10px, 0);
+  transform: translate(10px, 5px);
   width: 120px;
   height: 120px;
   background-color: #202020;
